src/test/ui/nll/guarantor-issue-46974.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/guarantor-issue-46974.rs:9:5
   |
LL |     let t = &mut *s; // this borrow should last for the entire function
   |             ------- borrow of `*s` occurs here
LL |     let x = &t.0;
LL |     *s = (2,);
   |     ^^^^^^^^^ assignment to borrowed `*s` occurs here
LL |     *x
   |     -- borrow later used here

error[E0621]: explicit lifetime required in the type of `s`
  --> $DIR/guarantor-issue-46974.rs:15:5
   |
LL | fn bar(s: &Box<(i32,)>) -> &'static i32 {
   |           ------------ help: add explicit lifetime `'static` to the type of `s`: `&'static std::boxed::Box<(i32,)>`
LL |     // FIXME(#46983): error message should be better
LL |     &s.0
   |     ^^^^ lifetime `'static` required

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0506, E0621.
For more information about an error, try `rustc --explain E0506`.
